--- a/spec/rails_app/app/views/layouts/application.html.erb
+++ b/spec/rails_app/app/views/layouts/application.html.erb
@@ -3,6 +3,21 @@
   <head>
     <title>db_mailer_rails - Test application</title>
     <%= csrf_meta_tags %>
+
+    <style type="text/css">
+      * {
+        margin: 0;
+        padding: 0;
+      }
+
+      .db_mailer__fields {
+        list-style: none;
+      }
+
+      .db_mailer__field_name {
+        font-weight: bold;
+      }
+    </style>
   </head>
 
   <body>
