--- a/spec/rails_app/app/views/test/index.html.erb
+++ b/spec/rails_app/app/views/test/index.html.erb
@@ -4,3 +4,7 @@
   1. <%= link_to 'Send test e-mail', test_send_email_path %><br>
   2. <%= link_to 'Send test e-mail (change layout)', test_send_email_2_path %>
 </div>
+<div style="margin-top: 20px;">
+  <div style="font-weight: bold;">Render <b>db_mailer_rails_fields_render</b> helper:</div>
+  <%= db_mailer_rails_fields_render(@db_mailer_template) %>
+</div>
